--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "~4.6.1",
-    "body-parser": "~1.4.3"
+    "body-parser": "~1.4.3",
+    "express": "~4.6.1"
   }
 }
